# hyperplane

./: .gitignore  .gitmodules  Cargo.toml  PLAN.md  README.md  RULES.md  run_tests.sh  setup_on_ec2.sh
simulator/: Cargo.toml  README.md  config.toml  config_sweep_cat_rate.toml  run.sh
simulator/scripts/: plot_account_selection.py  plot_miscellaneous.py  plot_results.py  plot_utils.py
simulator/scripts/sim_simple/: plot_account_selection.py  plot_miscellaneous.py  plot_results.py
simulator/scripts/sim_sweep_block_interval_constant_delay/: plot_results.py
simulator/scripts/sim_sweep_block_interval_constant_time_delay/: plot_results.py
simulator/scripts/sim_sweep_block_interval_scaled_delay/: plot_results.py
simulator/scripts/sim_sweep_cat_lifetime/: plot_results.py  requirements.txt
simulator/scripts/sim_sweep_cat_pending_dependencies/: plot_results.py
simulator/scripts/sim_sweep_cat_rate/: plot_results.py
simulator/scripts/sim_sweep_chain_delay/: plot_results.py
simulator/scripts/sim_sweep_duration/: plot_results.py
simulator/scripts/sim_sweep_total_block_number/: plot_results.py
simulator/scripts/sim_sweep_zipf/: plot_results.py
simulator/scripts/simple-sim/: plot_account_selection.py  plot_miscellaneous.py  plot_results.py  requirements.txt
simulator/src/: account_selection.rs  account_selector.rs  average_runs.py  config.rs  interface.rs  lib.rs  logging.rs  main.rs  network.rs  run_simulation.rs  save_results.rs  sim_simple.rs  sim_sweep_cat_rate.rs  simulation.rs  simulation_registry.rs  simulation_results.rs  stats.rs  testnodes.rs  zipf_account_selection.rs
simulator/src/scenarios/: config_simple.toml  config_sweep_block_interval_constant_block_delay.toml  config_sweep_block_interval_constant_delay.toml  config_sweep_block_interval_constant_time_delay.toml  config_sweep_block_interval_scaled_delay.toml  config_sweep_cat_lifetime.toml  config_sweep_cat_pending_dependencies.toml  config_sweep_cat_rate.toml  config_sweep_chain_delay.toml  config_sweep_duration.toml  (+28 more)
(+191 files in other folders)
