[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"
hyperplane = { path = ".." }
chrono = "0.4"
indicatif = "0.17"
serde_json = "1.0"

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs" 