[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperplane = { path = ".." }
tokio = { version = "1.36", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"
indicatif = "0.17"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs" 