[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperplane = { path = ".." }
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
rand_distr = "0.4.3"
indicatif = "0.17.7"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11.3"

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs" 